correction mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -465,19 +465,18 @@ h3 {
 }
 .back-mobile {
   width: 100%;
-  max-width: 1440px;
+  max-width: 1240px;
   background: #08020d;
-  padding: 35px 0 100px;
+  padding: 100px 20px 0;
   text-align: center;
 }
 .back-mobile h2 {
-  margin-bottom: 48px;
+  margin-bottom: 47px;
   color: #ffffff;
 }
 
 .mobile-block {
   display: flex;
-  padding: 0 120px;
   gap: 144px;
 }
 
